Parse service XML works

--- a/index.html
+++ b/index.html
@@ -11,25 +11,36 @@
 </head>
 <body>
 
-  <div class="container">
-    <div class="row text-center mt-5 mb-5">
-      <div class="col-12" id="title">
-        <h2>Upload files</h2>
+  <div class="container-fluid">
+
+    <div class="row mb-4" id="title">
+      <div class="col-2">
+        <img width="100px" height="100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/General_Electric_logo.svg/1200px-General_Electric_logo.svg.png" alt="">
+      </div>
+      <div class="col-10">
+        <h2 class="mt-2">General Electric - Centroamérica</h2>
+        <h4>Distribución de servicios semanal</h4>
       </div>
     </div>
+
     <div class="row text-center">
-      <div class="col mb-3">
+      <div class="col mb-2">
         <h2>Drop XML files here</h2>
       </div>
     </div>
+
     <div class="row justify-content-center">
+
       <div class="col-5 text-center" id="drop-space">
         <div id="icon-field">
           <i class="far fa-plus-square" id="plus-icon"></i>
         </div>
       </div>
+
     </div>
+
     <div class="row justify-content-center mt-4">
+
       <div class="col-8">
         <div class="input-group">
           <div class="input-group-prepend">
@@ -38,11 +49,13 @@
           <div class="custom-file">
             <input type="file" class="custom-file-input" id="file-input"
               aria-describedby="inputGroupFileAddon01">
-            <label class="custom-file-label" id="file-name" for="file-input">Choose file</label>
+            <label class="custom-file-label" id="file-name" for="file-input">No file uploaded</label>
           </div>
         </div>
       </div>
+
     </div>
+
   </div>
 
 </body>
