--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="container-fluid">
 
-    <div class="row mb-4" id="title">
+    <div class="row mb-5" id="title">
       <div class="col-2">
         <img width="100px" height="100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/General_Electric_logo.svg/1200px-General_Electric_logo.svg.png" alt="">
       </div>
@@ -23,17 +23,26 @@
       </div>
     </div>
 
-    <div class="row text-center">
-      <div class="col mb-2">
-        <h2>Drop XML files here</h2>
+    <div class="row justify-content-center text-center">
+      <div class="col-4 mb-2 mr-5">
+        <h2>Suelte el archivo XML de Servicios</h2>
+      </div>
+      <div class="col-4 mb-2">
+        <h2>Suelte el archivo XML de Agentes</h2>
       </div>
     </div>
 
     <div class="row justify-content-center">
 
-      <div class="col-5 text-center" id="drop-space">
-        <div id="icon-field">
-          <i class="far fa-plus-square" id="plus-icon"></i>
+      <div class="col-4 text-center mr-5 drop-space">
+        <div class="icon-field" id="agent-drop">
+          <i class="fas fa-file-medical" id="agent-icon"></i>
+        </div>
+      </div>
+
+      <div class="col-4 text-center drop-space">
+        <div class="icon-field" id="service-drop">
+          <i class="fas fa-file-medical" id="service-icon"></i>
         </div>
       </div>
 
@@ -41,15 +50,32 @@
 
     <div class="row justify-content-center mt-4">
 
-      <div class="col-8">
+      <div class="col-4 mr-5">
         <div class="input-group">
           <div class="input-group-prepend">
-            <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+            <span class="input-group-text" id="inputGroupFileAddon01">
+              <i class="fas fa-upload upload-icon"></i>
+            </span>
           </div>
           <div class="custom-file">
-            <input type="file" class="custom-file-input" id="file-input"
+            <input type="file" class="custom-file-input" id="agent-file-input"
               aria-describedby="inputGroupFileAddon01">
-            <label class="custom-file-label" id="file-name" for="file-input">No file uploaded</label>
+            <label class="custom-file-label" id="agent-file-name" for="file-input">No se ha cargado ningún archivo</label>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="inputGroupFileAddon01">
+              <i class="fas fa-upload upload-icon"></i>
+            </span>
+          </div>
+          <div class="custom-file">
+            <input type="file" class="custom-file-input" id="service-file-input"
+              aria-describedby="inputGroupFileAddon01">
+            <label class="custom-file-label" id="service-file-name" for="file-input">No se ha cargado ningún archivo</label>
           </div>
         </div>
       </div>
