--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
     <div class="row justify-content-center text-center">
       <div class="col-4 mb-2 mr-5">
-        <h2>Suelte el archivo XML de Servicios</h2>
+        <h2>Suelte el archivo XML de Agentes</h2>
       </div>
       <div class="col-4 mb-2">
-        <h2>Suelte el archivo XML de Agentes</h2>
+        <h2>Suelte el archivo XML de Servicios</h2>
       </div>
     </div>
 
@@ -100,7 +100,17 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
-              <div class="modal-body">
+              <div>
+                <table class="modal-body" style="width: 60%">
+                  <tr>
+                    <th>ID</th>
+                    <th>Nombre</th>
+                    <th>Códigos</th>
+                  </tr>
+                  <tr>
+                    
+                  </tr>
+                </table>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -126,8 +136,17 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
-              <div class="modal-body">
-                <p id="modal-body-text"></p>
+              <div>
+                <table class="modal-body" style="width: 60%">
+                  <tr>
+                    <th>ID</th>
+                    <th>Nombre</th>
+                    <th>Código</th>
+                  </tr>
+                  <tr>
+                    
+                  </tr>
+                </table>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
