Finish PR and style tables

--- a/index.html
+++ b/index.html
@@ -95,21 +95,20 @@
           <div class="modal-dialog modal-dialog-scrollable" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Agent XML content</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Contenido del archivo XML de agentes</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
               <div>
-                <table class="modal-body" style="width: 60%">
-                  <tr>
-                    <th>ID</th>
-                    <th>Nombre</th>
-                    <th>Códigos</th>
-                  </tr>
-                  <tr>
-                    
-                  </tr>
+                <table class="table table-striped modal-body" id="agent-table">
+                  <thead>
+                    <tr>
+                      <th scope="col">ID</th>
+                      <th scope="col">Nombre</th>
+                      <th scope="col">Códigos</th>
+                    </tr>
+                  </thead>
                 </table>
               </div>
               <div class="modal-footer">
@@ -131,21 +130,20 @@
           <div class="modal-dialog modal-dialog-scrollable" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Service XML content</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Contenido del archivo XML de servicios</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
               <div>
-                <table class="modal-body" style="width: 60%">
-                  <tr>
-                    <th>ID</th>
-                    <th>Nombre</th>
-                    <th>Código</th>
-                  </tr>
-                  <tr>
-                    
-                  </tr>
+                <table class="table table-striped modal-body" id="service-table">
+                  <thead>
+                    <tr>
+                      <th>ID</th>
+                      <th>Nombre</th>
+                      <th>Código</th>
+                    </tr>
+                  </thead>
                 </table>
               </div>
               <div class="modal-footer">
