--- a/index.html
+++ b/index.html
@@ -156,6 +156,38 @@
 
     </div>
 
+    <div class="row justify-content-center mt-4">
+
+      <div class="col-4 text-center">
+        <!-- Button trigger modal -->
+        <button type="button" id="schedule" class="btn btn-primary modal-btn" data-toggle="modal" data-target="#resultModal">
+          Calendarizar 
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="resultModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-scrollable" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Results</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <p id="modal-body-text"></p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+
   </div>
 
 </body>
